# Sylva-Neural-Core

./: .gitignore  README.md  main.py  pyproject.toml  testing.py
config/: ex_config.py  in_config.py
core/: config.py  intent_processor.py  stt.py  sylva_decision.py
modules/: create_note.py  get_date.py  get_time.py  greetings.py  open_app.py  remind_me.py  shutdown.py  voice_input.py  web_search.py
modules/config/: ex_config.py  in_config.py
rasa_nlu/: config.yml
rasa_nlu/data/: nlu.yml
tts/: generate.py
tts/voice_sample/vits_sample/: vits_generator.py  vits_models.txt
tts/voice_sample/xtts_v2_sample/: xtts_v2_generator.py  xtts_v2_models.txt
utils/: application_json_setup.py  dataclasess.py  function_hint.py  logger.py  play_voice.py  tts_generator.py
