[project]
sylva = "sylva.main:run"
name = "sylva-neural-core"
version = "0.1.0"
description = "local-first backend service that routes voice and command input into automated system actions without relying on cloud services."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "openai-whisper>=20250625",
    "playsound==1.2.2",
    "pyaudio>=0.2.14",
    "pyttsx3>=2.99",
    "rasa>=3.6.21",
    "requests>=2.32.5",
    "serpapi>=0.1.5",
    "soundfile>=0.13.1",
    "speechrecognition==3.8.1",
]
